--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ roles:
    start: 2019
    end: Ongoing
    employer: CopperPoint Insurance Companies
-   description: Building and managing public consumer facing digital products of CopperPoint on web and mobile that has countrywide daily active users. Website: <a href="https://www.copperpoint.com" taget="_blank">CopperPoint Insurance</a>, <a href="https://www.fromcounsel.com" taget="_blank">FromCounsel</a>, <a href="https://www.sparqa.com" taget="_blank">Sparqa</a>.
+   description: Building and managing public consumer facing digital products of <a href="www.copperpoint.com">CopperPoint</a> on web and mobile that has countrywide daily active users.
  - title: Senior Consultant
    start: 2018
    end: 2019
