--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ education:
    subject: Computer Science
    school: University of Cincinnati
    
- - level: Bachelor of Science (MS)
+ - level: Bachelor of Science (BS)
    date: 2009
    subject: Computer Science
    school: Jaypee University of Information technology.
