--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ roles:
    end: 2018
    employer: PricewaterHouseCoppers
    description: Senior Software Engineer within Application and Emerging Technology services, I was provided with a unique opportunity to help our clients identify and prioritize emerging technologies that can help solve their business problems
- - title: Senior Associate
+ - title: Software Engineer
    start: 2009
    end: 2012
    employer: Infosys Technologies Limited
